<resources>

    <string name="app_name">SHS Trophies</string>
    <string name="saratoga_high_school_trophies">SHS Trophies</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="admin_password_hint">Admin Password</string>

    <string name="action_settings">Settings</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_launch">LaunchActivity</string>

    <string name="progress_bar_starting_dialog">Launching&#8230;</string>
    <string name="progress_bar_asynctask_dialog">Downloading Spreadsheet</string>
    <string name="progress_bar_database_recreation">Recreating Database for New Changes</string>
    <string name="progress_bar_completed_database_setup">Setting UI for Updated Database</string>
    <string name="app_bane">Saratoga High School Trophies</string>
    <string name="sport_title">Sport Title</string>
    <string name="todo">TODO</string>
    <string name="download_data">Download Data</string>
    <string name="load_database">Load Database</string>
    <string name="sport_trophies">Sport Trophies</string>
    <string name="tap_a_sport_or_search">Tap a sport or search</string>
    <string name="tap_a_trophy_or_search">Tap a trophy or search</string>
    <string name="title">Trophy Title</string>
    <string name="clean">Clean</string>
    <string name="search_info">Search for players, years, trophy titles and more...</string>
    <string name="search">Search</string>
    <string name="hint_players">Enter a player name</string>
    <string name="hint_trophies">Enter one or more trophy titles (comma separated)</string>
    <string name="hint_years">Enter one or more trophy years (comma separated)</string>
    <string name="hint_sports">Enter one or more sport names (comma separated)</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="trophy_title_s">"Trophy Title(s)   "</string>
    <string name="player_name_s">"Player Name   "</string>
    <string name="sport_name_s">"Sport Name(s)   "</string>
    <string name="year_s">"Years(s)   "</string>
    <string name="blankline">"                                                                    "</string>
    <string name="error_message_players">Enter Player Name(s)</string>
    <string name="error_message_trophies">Enter Trophy Title(s)</string>
    <string name="error_message_years">Enter Trophy Year(s)</string>
    <string name="error_message_sports">Enter Sport Name(s)</string>
    <string name="success_message">Search Successful</string>
    <string name="title_activity_report_bug">ReportBugActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>
