<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="AdvancedSearchDialogActivity">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="Player Name"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.232" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="130dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="Year(s)"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.074"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.789" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginTop="372dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="Sport Name(s)"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="30dp"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.033"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.468" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="Trophy Title(s)"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.033"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.415" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/advanced_search"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutTrophies"
            android:layout_width="800dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="5"
            android:hint="@string/blankline"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayoutYears"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPlayers"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_trophies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_trophies"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutSports"
            android:layout_width="800dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="5"
            android:hint="@string/hint_sports"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.966"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_sports"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:hint="@string/blankline"
                android:inputType="text" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutYears"
            android:layout_width="800dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="5"
            android:hint="@string/hint_years"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.567">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_years"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/blankline"
                android:inputType="text" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPlayers"
            android:layout_width="800dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="5"
            android:hint="@string/hint_players"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.342">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_players"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/blankline"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_search"
            android:layout_width="170dp"
            android:layout_height="62dp"
            android:background="@color/colorPrimary"
            android:text="@string/search"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.974"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>