<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_trophy_players_and_years"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f2f2f2"
    tools:context=".TrophyPlayersAndYearsActivity">


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/trophy_players_and_years_thumbnail"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="#2d2d2d"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/trophy_players_and_years_title"
        android:contentDescription="@string/todo" />


    <TextView
        android:id="@+id/trophy_players_and_years_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/montserrat_extrabold"
        android:paddingTop="5dp"
        android:text="@string/sport_trophies"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trophy_players_and_years_thumbnail" />

    <TextView
        android:id="@+id/trophy_players_and_years_sport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="12dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/tap_a_trophy_or_search"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@+id/trophy_players_and_years_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trophy_players_and_years_title" />

    <com.mancj.materialsearchbar.MaterialSearchBar
        android:id="@+id/trophies_search"
        style="@style/MaterialSearchBarLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:paddingTop="15dp"
        app:layout_constraintBottom_toTopOf="@+id/trophy_players_and_years_recycleview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintVertical_bias="0.0"
        app:mt_maxSuggestionsCount="10"
        app:mt_placeholder=""
        app:mt_speechMode="false"></com.mancj.materialsearchbar.MaterialSearchBar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trophy_players_and_years_recycleview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:layout_marginTop="20dp"
        android:clipToPadding="false"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trophies_search"
        app:layout_constraintVertical_bias="0.0" />




</androidx.constraintlayout.widget.ConstraintLayout>